--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
             <input type="email" name="" id="" placeholder="Email" required>
             <input type="password" name="" id="" placeholder="Set Password" required>
             <input type="password" name="" id="" placeholder="Confirm Password" required>
-            <a href="#" class="btn">Submit</a>
+            <!-- <a href="#" type=""class="btn">Submit</a> -->
+            <button type="submit" class="btn">Submit</button>
         </form>
     </section>
 
